<resources>
    <string name="app_name">Bitseal</string>
    <string name="app_subtitle">In Atheros speramus</string>
    <string name="action_settings">Settings</string>
    <string name="action_compose_activity_send">Send</string>
    <string name="action_inbox_message_activity_add_to_address_book">Add sender to address book</string>
    <string name="action_sent_message_activity_add_to_address_book">Add recipient to address book</string>
    <string name="action_address_book_activity_add_to_address_book">Add new entry</string>
    <string name="action_identities_activity_create_new_address">Create new address</string>
    <string name="menu_item_label_inbox">Inbox</string>
    <string name="menu_item_label_sent">Sent</string>
    <string name="menu_item_label_compose">Compose</string>
    <string name="menu_item_label_identities">My Addresses</string>
    <string name="menu_item_label_addressBook">Address Book</string>
    <string name="menu_item_label_settings">Settings</string>
    <string name="menu_item_label_lock">Lock</string>
    <string name="message_status_preparing_to_send">Preparing to send message</string>
    <string name="message_status_requesting_pubkey">Requesting encryption keys from server</string>
    <string name="message_status_waiting_for_pubkey">Awaiting encryption keys from server</string>
    <string name="message_status_constructing_payload">Constructing message payload</string>
    <string name="message_status_doing_ack_pow">Doing proof of work for the acknowledgement</string>
    <string name="message_status_encrypting_message">Encrypting the message</string>
    <string name="message_status_doing_pow">Doing proof of work for the message</string>
    <string name="message_status_sending_message">Sending message</string>
    <string name="message_status_waiting_for_connection">Waiting for internet connection</string>
    <string name="message_status_message_sent">Message sent, waiting for acknowledgment</string>
    <string name="message_status_message_sent_no_ack_expected">Message sent, no acknowledgment expected</string>
    <string name="message_status_ack_received">Acknowledgment received</string>
    <string name="message_status_sending_failed">Failed to send the message</string>
    <string name="inbox_activity_title">Inbox</string>
    <string name="inbox_unread_tag">New</string>
    <string name="inbox_toast_unknown_database_error">An unknown error occurred while trying to access the database</string>
    <string name="inbox_welcome_message_to_address">Me</string>
    <string name="inbox_welcome_message_from_address">BM-NC2oGii7w8UT4igUhsCBGBE7gngvoD83</string>
    <string name="inbox_welcome_message_subject">Welcome to Bitseal. Please read this!</string>
    <string name="inbox_welcome_message_body">Thanks for trying out Bitseal! We really hope you enjoy the app.\n\nIf you have any feedback, please feel free to send us a message.\n\nNote: When you first run Bitseal, a new Bitmessage address will be generated for you. Bitseal will then do proof of work to publish that address to the Bitmessage network. This will take a few minutes and may cause delays in sending and receiving messages until it has been completed.</string>
    <string name="inbox_default_address_book_entry_0_label">Bitseal Developers</string>
    <string name="inbox_default_address_book_entry_0_address">BM-NC2oGii7w8UT4igUhsCBGBE7gngvoD83</string>
    <string name="inbox_default_address_book_entry_1_label">Darklogs.com</string>
    <string name="inbox_default_address_book_entry_1_address">BM-2cTUZmrFaypXnAR4DAXLbAb6KrFPRhGyEe</string>
    <string name="inbox_message_activity_title">Message</string>
    <string name="inbox_message_toAddress_label">To</string>
    <string name="inbox_message_fromAddress_label">From</string>
    <string name="inbox_message_subject_label">Subject</string>
    <string name="inbox_message_body_label">Message</string>
    <string name="inbox_message_reply_button_label">Reply</string>
    <string name="inbox_message_copy_button_label">Copy</string>
    <string name="inbox_message_delete_button_label">Delete</string>
    <string name="inbox_message_delete_dialog_textView_text">Delete this message?</string>
    <string name="inbox_message_delete_dialog_confirm_button_label">Delete</string>
    <string name="inbox_message_delete_dialog_cancel_button_label">Cancel</string>
    <string name="inbox_message_message_copied">Message text copied to the clipboard</string>
    <string name="inbox_message_message_deleted">Message deleted</string>
    <string name="sent_activity_title">Sent</string>
    <string name="sent_message_activity_title">Sent Message</string>
    <string name="sent_message_toaddress_label">To</string>
    <string name="sent_message_fromaddress_label">From</string>
    <string name="sent_message_subject_label">Subject</string>
    <string name="sent_message_body_label">Message</string>
    <string name="sent_message_status_label">Status</string>
    <string name="sent_message_copy_button_label">Copy</string>
    <string name="sent_message_delete_button_label">Delete</string>
    <string name="sent_message_delete_dialog_textView_text">Delete this message?</string>
    <string name="sent_message_delete_dialog_confirm_button_label">Delete</string>
    <string name="sent_message_delete_dialog_cancel_button_label">Cancel</string>
    <string name="sent_message_toast_message_copied">Message text copied to the clipboard</string>
    <string name="sent_message_toast_message_deleted">Message deleted</string>
    <string name="compose_activity_title">Compose</string>
    <string name="compose_toAddress_label">To</string>
    <string name="compose_toAddress_hint">Tap or type</string>
    <string name="compose_fromAddress_label">From</string>
    <string name="compose_fromAddress_hint">Tap or type</string>
    <string name="compose_subject_label">Subject</string>
    <string name="compose_subject_hint">Enter the message subject</string>
    <string name="compose_body_label">Message</string>
    <string name="compose_body_hint">Enter the message text</string>
    <string name="compose_dialog_to_address_selection_title">Select to address</string>
    <string name="compose_dialog_to_address_selection_scan_qr_code_button_label">Scan QR code</string>
    <string name="compose_dialog_to_address_selection_cancel_button_label">Cancel</string>
    <string name="compose_dialog_from_address_selection_title">Select from address</string>
    <string name="compose_dialog_from_address_selection_cancel_button_label">Cancel</string>
    <string name="compose_toast_qr_address_invalid">The scanned QR code does not contain a valid Bitmessage address</string>
    <string name="compose_toast_enter_to_address">You must enter a \'To\' address</string>
    <string name="compose_toast_enter_from_address">You must enter a \'From\' address</string>
    <string name="compose_toast_to_address_invalid">The \'To\' address must be a valid Bitmessage address or a label from your address book</string>
    <string name="compose_toast_from_address_invalid">The \'From\' address must be one of your addresses or the label of one of them</string>
    <string name="compose_toast_to_address_error">An error occurred while validating the \'To address\'</string>
    <string name="compose_toast_from_address_error">An error occurred while validating the \'From address\'</string>
    <string name="compose_toast_message_too_long">The message is too long. Bitmessage does not allow messages greater than 256kB in size.</string>
    <string name="compose_toast_sending_message">Sending the message</string>
    <string name="compose_toast_error">An error occurred</string>
    <string name="identities_activity_title">My Addresses</string>
    <string name="identities_confirm_address_creation_textView_text">Are you sure you want to create a new address?\n\nYou can have 
        as many addresses as you like, but currently we recommend that you only have one.\n\nHaving more than one address can make Bitseal
        run slower, because Bitseal must check for messages sent to each address you have.</string>
    <string name="identities_confirm_address_creation_confirm_button_label">Create a new address</string>
    <string name="identities_confirm_address_creation_cancel_button_label">Cancel</string>
	<string name="identities_dialog_list_item_label_title">Label</string>
	<string name="identities_dialog_list_item_address_title">Address</string>
	<string name="identities_dialog_list_item_send_from_button_label">Send message from</string>
	<string name="identities_dialog_list_item_show_qr_code_button_label">QR Code</string>
	<string name="identities_dialog_list_item_save_button_label">Save</string>
	<string name="identities_dialog_list_item_copy_button_label">Copy</string>
	<string name="identities_dialog_list_item_delete_button_label">Delete</string>
	<string name="identities_first_delete_dialog_textView_text">Delete this address? If you do so, it cannot be recovered.</string>
    <string name="identities_first_delete_dialog_confirm_button_label">Delete</string>
    <string name="identities_first_delete_dialog_cancel_button_label">Cancel</string>
    <string name="identities_second_delete_dialog_textView_text">Are you sure you want to delete this address?\n\nPlease only do so if 
        you are certain that you never want to use this address again.</string>
    <string name="identities_second_delete_dialog_confirm_button_label">Yes, delete this address</string>
    <string name="identities_second_delete_dialog_cancel_button_label">No, do not delete this address</string>
    <string name="network_settings_connection_section_label">Connection</string>
    <string name="network_settings_wifi_only_checkbox_label">Use wifi only</string>
    <string name="network_settings_servers_section_label">Servers</string>
    <string name="network_settings_add_new_server_button_label">Add new server</string>
    <string name="network_settings_restore_default_servers_button_label">Restore default servers</string>
    <string name="network_settings_note">Note: Bitseal will use all the servers listed</string>
    <string name="import_or_export_addresses_section_label">Addresses</string>
    <string name="import_or_export_import_address_button_label">Import address</string>
    <string name="import_or_export_export_address_button_label">Export address</string>
    <string name="export_addresses_dialog_label_title">Label</string>
    <string name="export_addresses_dialog_address_title">Address</string>
    <string name="export_addresses_dialog_address_show_qr_code_button_label">Show QR Code</string>
    <string name="export_addresses_dialog_address_copy_button_label">Copy</string>
    <string name="export_addresses_dialog_private_signing_key_label">Private Signing Key</string>
    <string name="export_addresses_dialog_private_signing_key_show_qr_code_button_label">Show QR Code</string>
    <string name="export_addresses_dialog_private_signing_key_copy_button_label">Copy</string>
    <string name="export_addresses_dialog_private_encryption_key_label_title">Private Encryption Key</string>
    <string name="export_addresses_dialog_private_encryption_key_show_qr_code_button_label">Show QR Code</string>
    <string name="export_addresses_dialog_private_encryption_key_copy_button_label">Copy</string>
    <string name="security_database_encryption_section_label">Database Encryption</string>
    <string name="security_database_encryption_checkbox_label">Enable database encryption</string>
    <string name="security_enter_passphrase_label">Enter passphrase</string>
    <string name="security_confirm_passphrase_label">Confirm passphrase</string>
    <string name="security_change_passphrase_button_hint">Change database passphrase</string>
    <string name="security_save_passphrase_button_hint">Save</string>
    <string name="security_cancel_passphrase_button_hint">Cancel</string>
</resources>