<?xml version="1.0" encoding="utf-8"?>

<LinearLayout 
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  >
  
    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/network_settings_connection_section_label" 
      style="?android:listSeparatorTextViewStyle"
      />
    
	<CheckBox
	  android:id="@+id/network_settings_wifi_only_checkbox"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:layout_marginTop="10dp"
	  android:layout_marginBottom="20dp"
	  android:layout_marginLeft="6dp"
	  android:layout_marginStart="6dp"
	  android:text="@string/network_settings_wifi_only_checkbox_label" 
	  />
	    
 	<TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/network_settings_servers_section_label" 
      style="?android:listSeparatorTextViewStyle"
      />
  	
  	<LinearLayout 
 	  android:layout_width="match_parent"
 	  android:layout_height="wrap_content"
	  android:orientation="horizontal"
 	  >
  
		  <Button 
		    android:id="@+id/network_settings_add_new_server_button"
		    android:layout_width="70dp"
		    android:layout_height="40dp"
		    android:layout_weight="1"
		    android:layout_marginTop="10dp"
		    android:layout_marginBottom="8dp"
		    android:layout_marginLeft="6dp"
		    android:layout_marginStart="6dp"
		    android:layout_marginRight="2dp"
		    android:layout_marginEnd="2dp"
		    android:textSize="16sp"
		    android:hint="@string/network_settings_add_new_server_button_label" 
		    />
	  
		  <Button 
		    android:id="@+id/network_settings_restore_default_servers_button"
		    android:layout_width="70dp"
		    android:layout_height="40dp"
		    android:layout_weight="1"
		    android:layout_marginTop="10dp"
		    android:layout_marginBottom="8dp"
		    android:layout_marginLeft="2dp"
		    android:layout_marginStart="2dp"
		    android:layout_marginRight="6dp"
		    android:layout_marginEnd="6dp"
		    android:textSize="16sp"
		    android:hint="@string/network_settings_restore_default_servers_button_label"
		    />
	  
	  </LinearLayout>
	  
    <ListView 
      android:id="@android:id/list"
	  android:layout_width="fill_parent" 
      android:layout_height="wrap_content"
      >
        
    </ListView>
    
	<TextView
	  android:layout_width="match_parent" 
	  android:layout_height="wrap_content" 
	  android:gravity="center"
	  android:layout_marginTop="15dp"
	  android:layout_marginLeft="4dp"
	  android:layout_marginStart="4dp"
	  android:textStyle="bold"
	  android:text="@string/network_settings_note"
	  android:textSize="14sp"
	  />
	  
</LinearLayout>