<?xml version="1.0" encoding="utf-8"?>

<LinearLayout 
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="150dp"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:background="@android:color/white" >
    
  <TextView
    android:id="@+id/sent_message_delete_dialog_textView"
    android:layout_width="wrap_content"
    android:layout_height="35dp"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="0dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:textIsSelectable="true"
    android:textSize="16sp"
    android:textStyle="bold"
    android:text="@string/sent_message_delete_dialog_textView_text"
    />
  
  	<LinearLayout 
 	  android:layout_width="match_parent"
 	  android:layout_height="wrap_content"
	  android:orientation="horizontal"
 	  >
  
	  <Button 
	    android:id="@+id/sent_message_delete_dialog_confirm_button"
	    android:layout_width="70dp"
	    android:layout_height="40dp"
	    android:layout_weight="1"
	    android:layout_marginTop="0dp"
	    android:layout_marginBottom="8dp"
	    android:layout_marginLeft="6dp"
	    android:layout_marginRight="2dp"
	    android:textSize="12sp"
	    android:hint="@string/sent_message_delete_dialog_confirm_button_label" 
	    />
  
	  <Button 
	    android:id="@+id/sent_message_delete_dialog_cancel_button"
	    android:layout_width="70dp"
	    android:layout_height="40dp"
	    android:layout_weight="1"
	    android:layout_marginTop="0dp"
	    android:layout_marginBottom="8dp"
	    android:layout_marginLeft="2dp"
	    android:layout_marginRight="6dp"
	    android:textSize="12sp"
	    android:hint="@string/sent_message_delete_dialog_cancel_button_label"
	    />
	  
	</LinearLayout>

</LinearLayout>